<resources>
    <string name="app_name">Travenor</string>
    <string name="onboarding_text1">Life is short and the world is <font color='#FF6726'>wide</font></string>
    <string name="onboarding_text2">It’s a big world out there go <font color='#FF6726'>explore</font></string>
    <string name="onboarding_text3">People don’t take trips, trips take <font color='#FF6726'>people</font></string>
    <string name="onboarding1">At Friends tours and travel, we customize reliable and trustworthy educational tours to destinations all over the world</string>
    <string name="onboarding2">To get the best of your adventure you just need to leave and go where you like. We are waiting for you</string>
    <string name="onboarding3">To get the best of your adventure you just need to leave and go where you like. We are waiting for you</string>
    <string name="create_account">Sign up now</string>
    <string name="sing_in_account">Sign in now</string>
    <string name="full_name">Full Name</string>
    <string name="pot">Please fill the details and create account</string>
    <string name="hint_email">example@example.com</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="hint_pas">●●●●●●●●</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="don_t_sign_up">Already have an account?</string>
    <string name="forgot_password"><font color='#FF6726'>Forgot Password?</font></string>
    <string name="reset_password">Reset Password</string>
    <string name="loremlong">Enter the password for recovery</string>
    <string name="loremlong1">Enter your email account to reset your password</string>
    <string name="hint_search_hotels">Search Hotels</string>
    <string name="cd_filter_button">Filter</string>
    <string name="title_find_hotel">Find a Hotel</string>
    <string name="home_username">Leonardo</string>
    <string name="home_explore_world">Explore the Beautiful World!</string>
    <string name="home_best_destinations">Best Destinations</string>
    <string name="profile_title">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_name">Leonardo</string>
    <string name="profile_email">leonardo@gmail.com</string>
    <string name="logout_button">Logout</string>
    <string name="filter_title">Filter</string>
    <string name="hint_country">Country</string>
    <string name="star_rating">Star Rating</string>
    <string name="facilities">Facilities</string>
    <string name="hint_amenities">Amenities (comma separated)</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_reset">Reset</string>
    <string name="cd_back_button">Back</string>
    <string name="favorite_places_title">Favorite Places</string>
    <string name="cd_back_button1">Back</string>
    <string name="hint_enter_message">Enter message...</string>
    <string name="cd_send_button">Send</string>
    <string name="cd_back_button2">Back</string>
    <string name="booking_form_title">Booking Form</string>
    <string name="select_date_label">Select Date</string>
    <string name="date_selection_hint">Tap on input field to select date</string>
    <string name="date_selection_hint_below_calendar">Click on input field to display the date</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="default_checkin_date">Apr 17</string>
    <string name="default_checkout_date">Apr 20</string>
    <string name="guests_label">Guest</string>
    <string name="room_type_label">Room Type</string>
    <string name="total_price">Total: NGN 140,000</string>
    <string name="continue_button">Continue</string>
    <string name="pin_enter_title">Enter PIN</string>
    <string name="pin_description">Enter the PIN code to log in to the app</string>
    <string name="pin_default_display">••••</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_clear">⌫</string>
    <string name="my_schedule_title">My Schedule</string>
    <string name="confirm_pin_title">Confirm PIN</string>
    <string name="confirm_pin_description">You will need a PIN code to log in to the app. PIN</string>
    <string name="checking_pin">Checking PIN...</string>
    <string name="otp_title">OTP View</string>
    <string name="show_otp_button">Show OTP</string>
    <string name="resend_otp_button">Resend OTP</string>
    <string name="messages_title">Messages</string>
    <string name="book_hotel_button">Book Now</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="save_button">Save</string>
</resources>