<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_marginTop="30dp">

    <ImageButton
        android:id="@+id/BackBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/cd_back_button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_marginTop="40dp"
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_form_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/selectDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:background="@color/l_blue"
        app:layout_constraintTop_toBottomOf="@+id/selectDateLabel"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TableLayout
        android:id="@+id/datesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/calendarView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selection_hint_below_calendar"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/selectDateLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TableRow>
            <TextView
                android:id="@+id/checkInText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/check_in"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/checkOutText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/check_out"
                android:textAlignment="center"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/textViewStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_checkin_date"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/textViewEndDate"
                android:layout_width="0dp"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="@string/default_checkout_date"
                android:textAlignment="center"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:text="@string/guests_label"/>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/btnMinusGuest"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:src="@drawable/min"
                    android:backgroundTint="@color/blue"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_button" />

                <TextView
                    android:id="@+id/guestCountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"/>

                <ImageButton
                    android:id="@+id/btnPlusGuest"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:backgroundTint="@color/blue"
                    android:src="@drawable/plus"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_button"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/room_type_label"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/room_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>