<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/BackBTN"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow"
        android:background="@color/white"
        android:contentDescription="@string/cd_back_button1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesRecyclerView"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/dot_background"
            android:hint="@string/hint_enter_message" />

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/otpr"
            android:background="@color/white"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/cd_send_button" />
    </LinearLayout>
</LinearLayout>