<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">

        <SearchView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:queryHint="@string/hint_search_hotels"
            android:iconifiedByDefault="false"
            android:focusable="true"
            android:background="@drawable/edit_text_background"
            android:focusableInTouchMode="true"/>

        <ImageButton
            android:id="@+id/filter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/vector"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_filter_button"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/headerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_find_hotel"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hotels_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>